--- a/index.html
+++ b/index.html
@@ -3,163 +3,204 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iumhcute</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Đăng Nhập</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-pink-100 text-gray-800 font-sans overflow-x-hidden">
+<body class="bg-pink-50 font-sans">
+  <!-- Login Page -->
   <div id="login-page" class="min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-      <h1 class="text-2xl sm:text-3xl font-bold text-pink-600 text-center mb-4">Đăng Nhập</h1>
-      <div class="space-y-4">
-        <input id="username" type="text" placeholder="Tên đăng nhập" oninput="updateUsername()" class="w-full p-2 border rounded text-base">
-        <input id="password" type="password" placeholder="Mật khẩu" oninput="updatePassword()" class="w-full p-2 border rounded text-base">
-        <button onclick="login()" class="w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base sm:text-lg">Đăng Nhập</button>
-      </div>
+      <h1 class="text-2xl font-bold text-pink-600 mb-6 text-center">Đăng Nhập</h1>
+      <input id="username" type="text" placeholder="Tên đăng nhập" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updateUsername()">
+      <input id="password" type="password" placeholder="Mật khẩu" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updatePassword()">
+      <button onclick="login()" class="w-full bg-pink-600 text-white py-2 rounded hover:bg-pink-700 transition-all">Đăng Nhập</button>
     </div>
   </div>
 
-  <div id="success-page" class="hidden min-h-screen flex items-center justify-center">
+  <!-- Success Page -->
+  <div id="success-page" class="min-h-screen flex items-center justify-center hidden">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
-      <h1 class="text-3xl font-bold text-pink-600 mb-4">Đăng nhập thành công!</h1>
-      <p class="text-gray-700">Đang chuyển hướng...</p>
+      <h1 class="text-2xl font-bold text-pink-600">Đăng nhập thành công!</h1>
+      <p class="text-gray-600">Đang chuyển hướng...</p>
     </div>
   </div>
 
-  <div id="task-success-page" class="hidden min-h-screen flex items-center justify-center">
+  <!-- Task Already Completed -->
+  <div id="task-success-page" class="min-h-screen flex items-center justify-center hidden">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
-      <h1 id="task-success-title" class="text-3xl font-bold text-pink-600 mb-4">Chưa hoàn thành</h1>
-      <p id="task-success-desc" class="text-gray-700">Đang gửi yêu cầu phê duyệt...</p>
+      <h1 id="task-success-title" class="text-2xl font-bold text-pink-600">Chưa hoàn thành</h1>
+      <p id="task-success-desc" class="text-gray-600">Đang gửi yêu cầu phê duyệt...</p>
     </div>
   </div>
 
-  <div id="task-already-completed-page" class="hidden min-h-screen flex items-center justify-center">
-    <div class="bg-white p-8 rounded-lg shadow-lg text-center">
-      <h1 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm vụ đã hoàn thành!</h1>
-      <p class="text-gray-700">Đang chuyển hướng...</p>
-    </div>
-  </div>
+  <!-- Main Page -->
+  <div id="main-page" class="min-h-screen p-6 hidden">
+    <audio id="bg-music" loop>
+      <source src="nhaciumh.mp3" type="audio/mpeg">
+    </audio>
+    <button id="play-music-btn" class="fixed top-4 right-4 bg-pink-600 text-white p-2 rounded-full hover:bg-pink-700 transition-all">
+      <span id="music-on" class="hidden">🎵</span>
+      <span id="music-off">🔇</span>
+    </button>
 
-  <div id="task-pending-page" class="hidden min-h-screen flex items-center justify-center">
-    <div class="bg-white p-8 rounded-lg shadow-lg text-center">
-      <h1 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm vụ đang chờ phê duyệt!</h1>
-      <p class="text-gray-700">Đang chuyển hướng...</p>
-    </div>
-  </div>
-
-  <div id="main-page" class="hidden min-h-screen flex flex-col items-center">
-    <div class="bg-pink-600 text-white w-full py-4 text-center">
-      <h1 class="text-4xl font-bold">Chúng Mình</h1>
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold text-pink-600">Chúng Mình</h1>
+      <p id="clock" class="text-lg text-gray-600"></p>
     </div>
 
-    <div class="my-8 text-center">
-      <div id="clock" class="text-5xl font-bold text-pink-600"></div>
-      <div id="days-together" class="text-2xl mt-4 text-gray-700"></div>
-    </div>
+    <p id="days-together" class="text-center text-lg text-gray-600 mb-6"></p>
 
-    <div class="w-full max-w-2xl p-4">
-      <h2 class="text-3xl font-bold text-pink-600 mb-4">Cửa Hàng Tình Yêu</h2>
-      <div id="store-main" class="grid grid-cols-1 gap-3 sm:grid-cols-2 sm:gap-4">
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Đám cưới siu hoành tráng</h3>
-          <p>Đổi bằng <span id="wedding-points">999999999999999</span> điểm</p>
-          <button onclick="redeemWedding()" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
+    <!-- Store Section -->
+    <div class="bg-white p-4 rounded-lg shadow mb-6">
+      <h2 class="text-xl font-semibold text-pink-600 mb-4">Cửa Hàng Tình Yêu</h2>
+      <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+        <div>
+          <h3 class="font-semibold">Đám cưới siu hoành tráng</h3>
+          <p>Đổi bằng 999999999999999 điểm</p>
         </div>
+        <button onclick="redeemWedding()" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
       </div>
-      <button onclick="toggleStoreMore()" class="mt-4 bg-pink-600 text-white p-2 rounded hover:bg-pink-700">Xem thêm</button>
-      <div id="store-more" class="hidden mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Voice đặc biệt 1</h3>
-          <p>Đổi bằng 28 điểm</p>
-          <button onclick="redeemStore('Voice đặc biệt 1', 28)" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
-        </div>
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Voice đặc biệt 2</h3>
-          <p>Đổi bằng 28 điểm</p>
-          <button onclick="redeemStore('Voice đặc biệt 2', 28)" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
-        </div>
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Voice đặc biệt 3</h3>
-          <p>Đổi bằng 28 điểm</p>
-          <button onclick="redeemStore('Voice đặc biệt 3', 28)" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
-        </div>
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Ôm an ủi</h3>
-          <p>Đổi bằng 1 điểm</p>
-          <button onclick="redeemStore('Ôm an ủi', 1)" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
-        </div>
-        <div class="bg-pink-200 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-semibold">Nụ Hôn tình iu</h3>
-          <p>Đổi bằng 1 điểm</p>
-          <button onclick="redeemStore('Nụ Hôn tình iu', 1)" class="mt-2 w-full bg-pink-600 text-white p-2 rounded hover:bg-pink-700 text-base">Đổi</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-full max-w-2xl p-4">
-      <h2 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm Vụ Tình Yêu</h2>
-      <div class="text-xl text-gray-700 mb-4">Tổng điểm của bé là: <span id="total-points">0</span>
-        <button id="refresh-points" onclick="refreshPoints()" class="ml-4 bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Cập nhật điểm</button>
-      </div>
-      <div id="tasks" class="space-y-4">
-        <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
-          <div class="flex items-center">
-            <i class="fas fa-heart text-pink-600 mr-2"></i>
-            <div>
-              <h3 class="text-xl font-semibold">Đăng Nhập</h3>
-              <p>1 điểm</p>
-            </div>
+      <div id="store-more" class="hidden mt-4 space-y-4">
+        <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold">Voice đặc biệt 1</h3>
+            <p>Đổi bằng 28 điểm</p>
           </div>
-          <button onclick="completeTask('Đăng Nhập')" class="bg-pink-600 text-white p-2 rounded hover:bg-pink-700">Hoàn thành</button>
+          <button onclick="redeemStore('Voice đặc biệt 1', 28)" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
         </div>
-        <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
-          <div class="flex items-center">
-            <i class="fas fa-heart text-pink-600 mr-2"></i>
-            <div>
-              <h3 class="text-xl font-semibold">Nói iu ank</h3>
-              <p>1 điểm</p>
-            </div>
+        <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold">Voice đặc biệt 2</h3>
+            <p>Đổi bằng 28 điểm</p>
           </div>
-          <button onclick="completeTask('Nói iu ank')" class="bg-pink-600 text-white p-2 rounded hover:bg-pink-700">Hoàn thành</button>
+          <button onclick="redeemStore('Voice đặc biệt 2', 28)" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
+        </div>
+        <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold">Voice đặc biệt 3</h3>
+            <p>Đổi bằng 28 điểm</p>
+          </div>
+          <button onclick="redeemStore('Voice đặc biệt 3', 28)" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
+        </div>
+        <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold">Ôm an ủi</h3>
+            <p>Đổi bằng 1 điểm</p>
+          </div>
+          <button onclick="redeemStore('Ôm an ủi', 1)" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
+        </div>
+        <div class="bg-pink-200 p-4 rounded-lg flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold">Nụ Hôn tình iu</h3>
+            <p>Đổi bằng 1 điểm</p>
+          </div>
+          <button onclick="redeemStore('Nụ Hôn tình iu', 1)" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Đổi</button>
+        </div>
+      </div>
+      <button onclick="toggleStoreMore()" class="mt-4 text-pink-600 hover:text-pink-700">Xem thêm</button>
+    </div>
+
+    <!-- Tasks Section -->
+    <div class="bg-white p-4 rounded-lg shadow mb-6">
+      <div class="flex justify-between items-center">
+        <h2 class="text-xl font-semibold text-pink-600">Nhiệm Vụ Tình Yêu</h2>
+        <p class="text-lg">Tổng điểm của bé là: <span id="total-points">0</span></p>
+      </div>
+      <button onclick="refreshPoints()" class="w-full bg-pink-600 text-white py-2 mt-4 rounded hover:bg-pink-700 transition-all">Cập nhật điểm</button>
+      <div id="tasks" class="mt-4 space-y-4">
+        <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
+          <div>
+            <input type="checkbox" disabled checked class="mr-2">
+            <span>Đăng Nhập</span>
+            <p class="text-sm text-gray-600">1 điểm</p>
+          </div>
+          <button onclick="completeTask('Đăng Nhập')" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Hoàn thành</button>
         </div>
         <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
-          <div class="flex items-center">
-            <i class="fas fa-heart text-pink-600 mr-2"></i>
-            <div>
-              <h3 class="text-xl font-semibold">Không bỏ bữa</h3>
-              <p>1 điểm</p>
-            </div>
+          <div>
+            <input type="checkbox" disabled class="mr-2">
+            <span>Nói iu ank</span>
+            <p class="text-sm text-gray-600">1 điểm</p>
           </div>
-          <button onclick="completeTask('Không bỏ bữa')" class="bg-pink-600 text-white p-2 rounded hover:bg-pink-700">Hoàn thành</button>
+          <button onclick="completeTask('Nói iu ank')" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Hoàn thành</button>
         </div>
         <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
-          <div class="flex items-center">
-            <i class="fas fa-heart text-pink-600 mr-2"></i>
-            <div>
-              <h3 class="text-xl font-semibold">Ngoan - Xink - Iu</h3>
-              <p>1 điểm</p>
-            </div>
+          <div>
+            <input type="checkbox" disabled class="mr-2">
+            <span>Không bỏ bữa</span>
+            <p class="text-sm text-gray-600">1 điểm</p>
           </div>
-          <button onclick="completeTask('Ngoan - Xink - Iu')" class="bg-pink-600 text-white p-2 rounded hover:bg-pink-700">Hoàn thành</button>
+          <button onclick="completeTask('Không bỏ bữa')" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Hoàn thành</button>
+        </div>
+        <div class="bg-white p-4 rounded-lg shadow flex justify-between items-center">
+          <div>
+            <input type="checkbox" disabled class="mr-2">
+            <span>Ngoan - Xink - Iu</span>
+            <p class="text-sm text-gray-600">1 điểm</p>
+          </div>
+          <button onclick="completeTask('Ngoan - Xink - Iu')" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition-all">Hoàn thành</button>
+        </div>
+      </div>
+
+      <!-- Admin Login Section -->
+      <div class="mt-6">
+        <h2 class="text-xl font-semibold text-pink-600 mb-4">Đăng Nhập Admin</h2>
+        <input id="admin-password" type="password" placeholder="Mật khẩu admin" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updateAdminPassword()">
+        <button onclick="adminLogin()" class="w-full bg-pink-600 text-white py-2 rounded hover:bg-pink-700 transition-all">Truy cập Admin</button>
+        <p id="admin-error" class="text-red-500 text-center mt-4 hidden">Mật khẩu không đúng!</p>
+      </div>
+
+      <!-- Admin Dashboard -->
+      <div id="admin-dashboard" class="hidden mt-6">
+        <h2 class="text-xl font-semibold text-pink-600 mb-4">Quản Trị Nhiệm Vụ</h2>
+        <!-- Total Points -->
+        <div class="bg-white p-4 rounded-lg shadow mb-6">
+          <h3 class="text-lg font-semibold text-pink-600">Tổng điểm hiện tại: <span id="admin-total-points">0</span></h3>
+          <input id="new-points" type="number" placeholder="Nhập số điểm mới" class="w-full p-2 mt-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600">
+          <button onclick="updatePoints()" class="w-full bg-pink-600 text-white py-2 mt-2 rounded hover:bg-pink-700 transition-all">Cập nhật</button>
+        </div>
+        <!-- Connection Status -->
+        <div class="bg-white p-4 rounded-lg shadow mb-6">
+          <p id="connection-status" class="text-gray-600">Đang kiểm tra kết nối...</p>
+        </div>
+        <!-- Pending Tasks -->
+        <div class="bg-white p-4 rounded-lg shadow mb-6">
+          <h3 class="text-lg font-semibold text-pink-600 mb-4">Nhiệm Vụ Chờ Phê Duyệt</h3>
+          <div id="pending-tasks" class="space-y-4">
+            <p>Đang tải...</p>
+          </div>
+        </div>
+        <!-- All Tasks -->
+        <div class="bg-white p-4 rounded-lg shadow mb-6">
+          <h3 class="text-lg font-semibold text-pink-600 mb-4">Tất Cả Nhiệm Vụ</h3>
+          <div id="all-tasks" class="space-y-4">
+            <p>Đang tải...</p>
+          </div>
+        </div>
+        <!-- Controls -->
+        <div class="bg-white p-4 rounded-lg shadow mb-6">
+          <button onclick="refreshAdminTasks()" class="w-full bg-pink-600 text-white py-2 rounded hover:bg-pink-700 transition-all mb-2">Làm mới</button>
+          <button onclick="resetTasks()" class="w-full bg-red-600 text-white py-2 rounded hover:bg-red-700 transition-all">Reset hôm nay</button>
+        </div>
+        <!-- Statistics -->
+        <div class="bg-white p-4 rounded-lg shadow">
+          <h3 class="text-lg font-semibold text-pink-600 mb-4">Thống kê:</h3>
+          <p>Tổng nhiệm vụ: <span id="total-tasks">0</span></p>
+          <p>Đã hoàn thành: <span id="completed-tasks">0</span></p>
+          <p>Chờ phê duyệt: <span id="pending-tasks-count">0</span></p>
         </div>
       </div>
     </div>
   </div>
 
-  <div id="notification-overlay" class="fixed inset-0 bg-black bg-opacity-30 z-50 flex items-center justify-center opacity-0 pointer-events-none transition-all duration-300">
-    <div id="notification-popup" class="bg-white rounded-xl shadow-2xl px-8 py-6 text-center min-w-[220px] max-w-xs">
-      <h2 id="notification-message" class="text-2xl font-bold mb-2 text-pink-600">Thông báo</h2>
-      <p id="notification-desc" class="text-base text-gray-700"></p>
+  <!-- Notification Overlay -->
+  <div id="notification-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 pointer-events-none transition-all">
+    <div id="notification-popup" class="bg-white p-6 rounded-lg shadow-lg text-center">
+      <h1 id="notification-message" class="text-xl font-bold text-pink-600">Thông báo</h1>
+      <p id="notification-desc" class="text-gray-600"></p>
     </div>
   </div>
-
-  <button id="play-music-btn" class="fixed bottom-4 right-4 z-50 bg-pink-600 text-white p-3 rounded-full shadow-lg">
-    <i id="music-on" class="fas fa-music"></i>
-    <i id="music-off" class="fas fa-volume-mute hidden"></i>
-  </button>
-
-  <audio id="bg-music" src="nhaciumh.mp3" loop preload="auto" style="display:none;"></audio>
 
   <script src="script.js"></script>
 </body>
